dts: msm8996: Don't enable USB support by default for msm8996
Enable support in apq8096-db820c board file.

Signed-off-by: Vivek Gautam <vivek.gautam@codeaurora.org>

--- a/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
+++ b/arch/arm64/boot/dts/qcom/apq8096-db820c.dtsi
@@ -338,6 +338,18 @@
 				core-vcc-supply = <&pm8994_s4>;
 			};
 		};
+
+		phy@7411000 {
+			status = "okay";
+		};
+
+		phy@7410000 {
+			status = "okay";
+		};
+
+		usb@6a00000 {
+			status = "okay";
+		};
 	};
 
 
