--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -753,6 +753,7 @@
 
 			resets = <&gcc GCC_QUSB2PHY_PRIM_BCR>;
 			nvmem-cells = <&qusb2p_hstx_trim>;
+			status = "disabled";
                 };
 
 		phy@7410000 {
@@ -774,6 +775,7 @@
 			resets = <&gcc GCC_USB3_PHY_BCR>,
 				<&gcc GCC_USB3PHY_PHY_BCR>;
 			reset-names = "phy", "common";
+			status = "disabled";
 
 			ssusb_phy_0: lane@7410200 {
 				reg = <0x7410200 0x200>,
@@ -803,6 +805,7 @@
 			assigned-clock-rates = <19200000>, <150000000>;
 
 			power-domains = <&gcc USB30_GDSC>;
+			status = "disabled";
 
 			dwc3@6a00000 {
 				compatible = "snps,dwc3";
